rancher/fleet/apps/emby-ingress/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: emby
spec:
  ports:
    - name: http
      port: 8096
      protocol: TCP
      targetPort: 8096
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: emby-host
  labels:
    kubernetes.io/service-name: emby
addressType: IPv4
ports:
  - name: http
    protocol: TCP
    port: 8096
endpoints:
  - addresses:
      - 10.0.0.50
    conditions: {}
